# sid-server

./: CONTRIBUTING.rst  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  sidserver.conf  tox.ini
apache2/: sidserver.conf
config-generator/: keystone.conf
doc/: Makefile
doc/ext/: apidoc.py
doc/source/: apache-httpd.rst  api_curl_examples.rst  architecture.rst  cli_examples.rst  community.rst  conf.py  configuration.rst  configure_federation.rst  configuringservices.rst  developing.rst  extension_development.rst  extensions.rst  external-auth.rst  http-api.rst  index.rst  installing.rst  key_terms.rst  setup.rst
etc/: default_catalog.templates  keystone.conf.sample  sidserver-paste.ini  sidserver.conf
examples/pki/: gen_pki.sh
httpd/: keystone.py  wsgi-keystone.conf
keystone/assignment/: controllers.py
keystone/aws/: .aws_sip.py.swo  .aws_sip.py.swp  __init__.py
keystone/token/: .controllers.py.swp  .routers.py.swp  controllers.py  routers.py
sidserver/: backends.py  clean.py  cli.py  config.py  controllers.py  exception.py  i18n.py  notifications.py  routers.py  service.py
sidserver/a_openstack/: .openstack_sip.py.swp  controllers.py  openstack_sip.py  routers.py
sidserver/assignment/: __init__.py  controllers.py  core.py  routers.py  schema.py
sidserver/auth/: __init__.py  controllers.py  core.py  routers.py
sidserver/aws/: .aws_sip.py.swo  .aws_sip.py.swp  .controllers.py.swp  __init__.py  aws_sip.py  controllers.py  routers.py
sidserver/azure/: .azure_sip.py.swo  .azure_sip.py.swp  __init__.py  azure_sip.py  azure_sip.py.bak  controllers.py  routers.py
sidserver/catalog/: __init__.py  controllers.py  core.py  routers.py  schema.py
sidserver/common/: authorization.py  base64utils.py  config.py  controller.py  dependency.py  json_home.py  (+6 more)
tools/: sample_data.sh
(+207 files in other folders)
