[metadata]
name = sidserver
version = 2015.1.1
summary = OpenStack Identity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    sidserver
scripts =
    bin/sidserver-all
    bin/sidserver-manage

[global]
setup-hooks =
    pbr.hooks.setup_hook


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[compile_catalog]
directory = sidserver/locale
domain = sidserver

[update_catalog]
domain = sidserver
output_dir = sidserver/locale
input_file = sidserver/locale/sidserver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sidserver/locale/sidserver.pot
copyright_holder = OpenStack Foundation
msgid_bugs_address = https://bugs.launchpad.net/sidserver

# NOTE(dstanek): Uncomment the [pbr] section below and remove the ext.apidoc
# Sphinx extension when https://launchpad.net/bugs/1260495 is fixed.
[pbr]
warnerrors = True
#autodoc_tree_index_modules = True
#autodoc_tree_root = ./sidserver

[entry_points]
oslo.config.opts =
    sidserver = sidserver.common.config:list_opts
    sidserver.notifications = sidserver.notifications:list_opts
    sidserver.openstack.common.eventlet_backdoor = sidserver.openstack.common.eventlet_backdoor:list_opts
